# Learnix

./: .env.example  .gitignore  AGENT.md  PLAN.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
Learnix/: docker-compose.yml  nginx-proxy-vhost.d.example.conf
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260404_0001_init.py  20260404_0002_user_onboarding.py  20260404_0003_web_session.py  20260407_0004_courses_lessons_chat.py  20260409_0005_notification_preferences.py  20260410_0006_lesson_chat_unique.py
backend/app/: main.py
backend/app/api/: deps.py  ollama_http.py
backend/app/core/: config.py
backend/tests/: conftest.py
bot/: Dockerfile  pyproject.toml
bot/tests/: test_handlers_import.py
bot/tg_bot/: api_client.py  bot_common.py  config.py  main.py  web_menu.py
bot/tg_bot/handlers/: common.py  onboarding_course.py
bot/tg_bot/keyboards/: learn.py
docker/: ensure-databases.sh  postgres-init.sql
docker/mihomo/: Dockerfile  build_config.py  entrypoint.sh
web/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
web/docker/: Caddyfile.admin.tpl  Caddyfile.plain  docker-entrypoint.sh
web/e2e/: smoke.spec.ts
web/src/: AdminDashboard.tsx  App.tsx  UserDashboard.tsx  api.ts  index.css  main.tsx  types.ts
web_instructions/: admonition.md  ai_chat.md  ai_thinking_text.md  button.md  calendar.md  checkboxes.md  dashboard_tiles_example.md  footer.md  inline_radio_select.md  nav_menu.md  shader.md  switch.md
(+54 files in other folders)
